--- a/collector/configuration/tailaware-collector-configuration.yaml
+++ b/collector/configuration/tailaware-collector-configuration.yaml
@@ -6,9 +6,19 @@ receivers:
       grpc:
   # see: https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/receiver/hostmetricsreceiver
   hostmetrics:
+    collection_interval: 60s
     scrapers:
-      load:
       memory:
+      cpu:
+      network:
+      load:
+  prometheus:
+    config:
+      scrape_configs:
+        - job_name: "tailaware-collector"
+          scrape_interval: 30s
+          static_configs:
+            - targets: ["0.0.0.0:8888"]
 
 processors:
   # see: https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/batchprocessor
@@ -53,17 +63,34 @@ exporters:
     endpoint: otlp.eu01.nr-data.net:443
     headers:
       api-key: ${TELEMETRY_BACKEND_API_KEY}
+  otlphttp:
+    auth:
+      authenticator: basicauth/otlp
+    endpoint: ${TELEMETRY_BACKEND_ENDPOINT}
+    tls:
+      insecure: true
+
+extensions:
+  basicauth/otlp:
+    client_auth:
+      username: ${TELEMETRY_BACKEND_USER}
+      password: ${TELEMETRY_BACKEND_TOKEN}
 
 service:
   telemetry:
     logs:
       level: "debug"
+  extensions: [basicauth/otlp]
   pipelines:
     traces:
       receivers: [otlp]
       processors: [tail_sampling, batch]
-      exporters: [otlp/newrelic, debug]
+      exporters: [otlp/newrelic, otlphttp, debug]
     metrics:
-      receivers: [otlp, hostmetrics]
+      receivers: [otlp, hostmetrics, prometheus]
       processors: [batch]
-      exporters: [otlp/newrelic, debug]
+      exporters: [otlp/newrelic, otlphttp, debug]
+    logs:
+      receivers: [otlp]
+      processors: [batch]
+      exporters: [otlp/newrelic, otlphttp, debug]
